--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,54 @@
 server:
-  port: 4399
+  port: 8080
 
 spring:
-  datasource:
+  datasource: # MySQL的配置
     url: jdbc:mysql://127.0.0.1:3306/gpt_ai?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&nullCatalogMeansCurrent=true
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
-
-  redis:
+  redis: # redis的配置
     host: 127.0.0.1
     port: 6379
     database: 1
-    password: chen
+    password:
+  thymeleaf: #thymeleaf模板的配置
+    prefix: classpath:/templates/
+    suffix: .html
+    encoding: UTF-8
+    cache: false
 
 # mybatis 相关统一配置
 mybatis-plus:
   configuration:
     #开启下划线转驼峰
     map-underscore-to-camel-case: true
+
+dong:
+  mq: #rabbitmq
+    host: 127.0.0.1 #ip
+    port: 5672 #端口
+    relay_port: 61613 #stomp端口
+    virtual_host: ws_demo
+    password: xxx
+    username: admin
+    MSG_TOPIC_KEY: topic.public #key
+    MSG_TOPIC_QUEUE: topic.queue #队列
+    MQ_EXCHANGE: topic.websocket.exchange #交换机
+  jwt:
+    issuer: dong # 签发者
+    secret: hello_world # 签名密钥
+    expire: 2592000000 # jwt的有效期，默认30天
+  security:
+    salt: tech_π # 密码加盐, 更安全的做法是每个用户的密码使用独立的盐，并将其保存在用户表中
+    salt-index: 3 # 盐插入的位置
+
+gpt-ai:
+  alibaba:
+    key: xxx
+  xun_fei:
+    app_id: xxx
+    client_key: xxx
+    client_secret: xxx
+
+
