--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,16 @@
         <okhttp.version>4.9.3</okhttp.version>
         <gson.version>2.8.9</gson.version>
         <fastJson.version>1.2.67</fastJson.version>
-        <alibaba-skd-dashscope.version>2.8.2</alibaba-skd-dashscope.version>
+        <alibaba-skd-dashscope.version>2.8.3</alibaba-skd-dashscope.version>
         <thread-local.version>2.14.2</thread-local.version>
         <mysql.version>8.0.29</mysql.version>
         <guave.version>21.0</guave.version>
         <webSocket.version>2.7.17</webSocket.version>
         <jwt.version>4.4.0</jwt.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
+        <ip2region.version>2.7.0</ip2region.version>
+        <minio.version>8.2.2</minio.version>
+        <aliOss.version>3.15.1</aliOss.version>
     </properties>
 
     <parent>
@@ -39,8 +42,20 @@
         <dependency>
             <groupId>org.lionsoul</groupId>
             <artifactId>ip2region</artifactId>
-            <version>2.7.0</version>
+            <version>${ip2region.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>${minio.version}</version> <!-- 请检查最新的版本 -->
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.aliyun.oss/aliyun-sdk-oss -->
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>${aliOss.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
